--- a/src/teaeli/AdminPannel.form
+++ b/src/teaeli/AdminPannel.form
@@ -1146,7 +1146,7 @@
                         <Component class="javax.swing.JTable" name="ingStockHistoryTbl">
                           <Properties>
                             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                              <Table columnCount="6" rowCount="4">
+                              <Table columnCount="6" rowCount="0">
                                 <Column editable="false" title="Date" type="java.lang.Object"/>
                                 <Column editable="false" title="Ingredient Name" type="java.lang.Object"/>
                                 <Column editable="false" title="Old Qty" type="java.lang.Object"/>
@@ -1189,6 +1189,7 @@
                                 </Column>
                               </TableColumnModel>
                             </Property>
+                            <Property name="rowHeight" type="int" value="23"/>
                             <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
                               <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
                             </Property>
