--- a/src/teaeli/CreateNewBlendOrder2.form
+++ b/src/teaeli/CreateNewBlendOrder2.form
@@ -73,7 +73,7 @@
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" alignment="1" attributes="0">
                                   <Component id="cancelBtn" min="-2" pref="130" max="-2" attributes="0"/>
-                                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                                  <EmptySpace max="-2" attributes="0"/>
                                   <Component id="confirmBtn" min="-2" pref="130" max="-2" attributes="0"/>
                               </Group>
                               <Group type="102" alignment="1" attributes="0">
@@ -99,9 +99,9 @@
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="tblMasterPlanScrollPane" pref="389" max="32767" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="confirmBtn" alignment="0" min="-2" pref="30" max="-2" attributes="0"/>
-                      <Component id="cancelBtn" min="-2" pref="30" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="confirmBtn" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                      <Component id="cancelBtn" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" max="-2" attributes="0"/>
               </Group>
