--- a/src/teaeli/AdminPannel.form
+++ b/src/teaeli/AdminPannel.form
@@ -435,9 +435,6 @@
                               <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
                             </Property>
                           </Properties>
-                          <AuxValues>
-                            <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
-                          </AuxValues>
                         </Component>
                       </SubComponents>
                     </Container>
@@ -475,16 +472,16 @@
                           <Group type="102" attributes="0">
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Group type="102" attributes="0">
-                                      <Component id="searchStockBlendComboBox" min="-2" pref="245" max="-2" attributes="0"/>
-                                      <EmptySpace max="-2" attributes="0"/>
-                                      <Component id="searchStockBlendsBtn" min="-2" max="-2" attributes="0"/>
-                                      <EmptySpace max="32767" attributes="0"/>
-                                      <Component id="refreshBlendInventryBtn" min="-2" pref="50" max="-2" attributes="0"/>
-                                  </Group>
-                                  <Component id="jScrollPane2" alignment="0" pref="600" max="32767" attributes="0"/>
+                                  <Component id="jScrollPane2" alignment="0" pref="605" max="32767" attributes="0"/>
                                   <Group type="102" attributes="0">
                                       <Group type="103" groupAlignment="0" attributes="0">
+                                          <Group type="102" attributes="0">
+                                              <Component id="searchStockBlendComboBox" min="-2" pref="245" max="-2" attributes="0"/>
+                                              <EmptySpace max="-2" attributes="0"/>
+                                              <Component id="searchStockBlendsBtn" min="-2" max="-2" attributes="0"/>
+                                              <EmptySpace max="-2" attributes="0"/>
+                                              <Component id="blendDeliveryBtn" min="-2" max="-2" attributes="0"/>
+                                          </Group>
                                           <Component id="inventoryBlendLbl" min="-2" pref="67" max="-2" attributes="0"/>
                                           <Component id="jLabel7" alignment="0" min="-2" max="-2" attributes="0"/>
                                       </Group>
@@ -505,10 +502,10 @@
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="searchStockBlendsBtn" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                                   <Component id="searchStockBlendComboBox" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
-                                  <Component id="refreshBlendInventryBtn" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                                  <Component id="blendDeliveryBtn" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="jScrollPane2" pref="475" max="32767" attributes="0"/>
+                              <Component id="jScrollPane2" pref="394" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                     </DimensionLayout>
@@ -595,14 +592,12 @@
                         </Property>
                       </Properties>
                     </Component>
-                    <Component class="javax.swing.JButton" name="refreshBlendInventryBtn">
+                    <Component class="javax.swing.JButton" name="blendDeliveryBtn">
                       <Properties>
-                        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                          <Image iconType="3" name="/teaeli/Refresh.png"/>
-                        </Property>
+                        <Property name="text" type="java.lang.String" value="Deliver Blend"/>
                       </Properties>
                       <Events>
-                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="refreshBlendInventryBtnActionPerformed"/>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="blendDeliveryBtnActionPerformed"/>
                       </Events>
                     </Component>
                   </SubComponents>
