Order details view interface populated

--- a/src/teaeli/AdminPannel.form
+++ b/src/teaeli/AdminPannel.form
@@ -259,6 +259,9 @@
                   <StringArray count="0"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="orderSearchComboActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
